--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "type": "git",
     "url": ""
   },
-  "author": "Johny Prieto <johny.prieto@munitienda.com>",
+  "author": "Johny Prieto <johnyprieto001@gmail.com>",
   "license": "",
   "files": [
     "README.md",
@@ -56,6 +56,7 @@
     "@loopback/rest-explorer": "^5.0.5",
     "@loopback/service-proxy": "^5.0.5",
     "loopback-connector-mongodb": "^5.6.0",
+    "loopback4-soft-delete": "^7.0.0",
     "tslib": "^2.0.0"
   },
   "devDependencies": {
